crates/strider-analyze/tests/snapshots/v3__arm_be__stack__main.snap
---
source: crates/strider-analyze/tests/v3_baseline.rs
assertion_line: 177
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x100d8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "5" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "6" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "9" [label="const 0x10270:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "10" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "12" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "13" -> "7" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "14" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "7" -> "14" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "14" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "14" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x10118:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "14" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" [label="const 0x7:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "18" -> "14" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" -> "14" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "20" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "14" -> "20" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "21" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "22" -> "20" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "22" [label="const 0x1015c:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "23" -> "20" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v24" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "14" -> "v24" [color="#888888", style=dashed];
  "v24" -> "20" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "25" -> "20" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "26" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "20" -> "26" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "27" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "28" -> "26" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x102ac:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "29" -> "26" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0x3:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "v30" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "20" -> "v30" [color="#888888", style=dashed];
  "v30" -> "26" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "32" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "26" -> "32" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "33" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "34" -> "32" [color="#88cc88", label=r0, fontcolor="#cccccc", fontsize=9];
  "v35" [label="Post Call\nr0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v35" [color="#888888", style=dashed];
  "v35" -> "32" [color="#88cc88", label=r1, fontcolor="#cccccc", fontsize=9];
  "v36" [label="Post Call\nd0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v36" [color="#888888", style=dashed];
  "v36" -> "32" [color="#88cc88", label=d0, fontcolor="#cccccc", fontsize=9];
  "v37" [label="Post Call\nd1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "26" -> "v37" [color="#888888", style=dashed];
  "v37" -> "32" [color="#88cc88", label=d1, fontcolor="#cccccc", fontsize=9];
  "34" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "38" -> "34" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v35" -> "34" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "38" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "39" -> "38" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "38" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "40" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "40" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "40" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xfffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "41" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "39" [label="MemPartition[MemPartitionId(5)]", shape=trapezium, fillcolor="#3a1a4a"];
  "26" -> "39" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "33" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "43" -> "33" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "43" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "39" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v44" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v44" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "34" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "31" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "45" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v30" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "45" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "46" -> "45" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "45" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "46" [label="MemPartition[MemPartitionId(4)]", shape=trapezium, fillcolor="#3a1a4a"];
  "20" -> "46" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "47" -> "27" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "47" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "46" -> "47" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v48" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v48" -> "47" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "31" -> "47" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "25" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "49" -> "25" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "v24" -> "25" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "49" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "50" -> "49" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "49" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "50" [label="MemPartition[MemPartitionId(3)]", shape=trapezium, fillcolor="#3a1a4a"];
  "14" -> "50" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "21" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "51" -> "21" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "51" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "50" -> "51" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v52" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v52" -> "51" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "25" -> "51" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "19" [label="Xor:u32", shape=box, fillcolor="#2d2d2d"];
  "53" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "18" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "18" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "54" -> "18" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "10" -> "18" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "10" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "10" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "55" -> "10" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "55" [label="const 0x1fffffff0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "54" [label="MemPartition[MemPartitionId(2)]", shape=trapezium, fillcolor="#3a1a4a"];
  "7" -> "54" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "53" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "54" -> "53" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "40" -> "53" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "15" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "56" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "56" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "54" -> "56" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v57" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v57" -> "56" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "56" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "58" -> "13" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "59" -> "13" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "59" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "59" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "60" -> "59" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "60" [label="const 0x1ffffffe8:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "58" [label="MemPartition[MemPartitionId(1)]", shape=trapezium, fillcolor="#3a1a4a"];
  "1" -> "58" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "11" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "11" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "61" -> "11" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "61" [label="const 0x1ffffffec:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "8" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "62" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "62" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "63" -> "62" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v64" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v64" -> "62" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "65" -> "62" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "65" [label="const 0x2:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "63" [label="StackStore u32\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "58" -> "63" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v66" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v66" -> "63" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "13" -> "63" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "4" [label="Add:u32", shape=box, fillcolor="#2d2d2d"];
  "41" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "67" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "67" [label="const 0x1fffffff4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "2" [label="MemUnion", shape=trapezium, fillcolor="#3a1a4a"];
  "68" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "68" [label="StackStore u32\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "69" -> "68" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v70" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v70" -> "68" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "71" -> "68" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "71" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "69" [label="StackStore u32\n→ ram[sp - 12]", shape=box3d, fillcolor="#20182a"];
  "72" -> "69" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v73" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v73" -> "69" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "74" -> "69" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "74" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "72" [label="StackStore u32\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "75" -> "72" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v76" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v76" -> "72" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "77" -> "72" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "77" [label="init\nr11", shape=Mdiamond, fillcolor="#1a3a5c"];
  "75" [label="StackStore u32\n→ ram[sp - 4]", shape=box3d, fillcolor="#20182a"];
  "78" -> "75" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v79" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v79" -> "75" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "80" -> "75" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "80" [label="init\nlr", shape=Mdiamond, fillcolor="#1a3a5c"];
  "78" [label="MemPartition[MemPartitionId(0)]", shape=trapezium, fillcolor="#3a1a4a"];
  "81" -> "78" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "81" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
